fix: 🐛 toolbar display in VE on small screens
add white-space: normal;

--- a/skinStyles/extensions/VisualEditor/ext.visualEditor.less
+++ b/skinStyles/extensions/VisualEditor/ext.visualEditor.less
@@ -286,12 +286,6 @@
 	}
 }
 
-// .citizen-scroll--down .ve-init-mw-desktopArticleTarget-toolbar {
-// 	&.ve-ui-toolbar-floating > .oo-ui-toolbar-bar {
-// 		top: 0; // stick to top
-// 	}
-// }
-
 // Make toolbar more smaller screen friendly
 // Well at least I did by best
 @media ( max-width: 800px ) {
@@ -300,14 +294,11 @@
 	}
 
 	.skin-citizen {
-		.ve {
-			&-ui {
-				&-toolbar {
-					> .oo-ui-toolbar-bar {
-						.oo-ui-toolbar-tools {
-							display: inline;
-						}
-					}
+		.ve-ui-toolbar {
+			> .oo-ui-toolbar-bar {
+				.oo-ui-toolbar-tools {
+					display: inline;
+					white-space: normal;
 				}
 			}
 		}
